# cts_optimization_algorithm

./: README.md  Readme.md  app.py  data_processor.py  login_page.html  models.py  pyproject.toml  requirements.txt  routes.py
admin/: main.py  models.py  routes.py  uploads
admin/static/css/: custom.css
admin/static/js/: dashboard.js  main.js  visualization.js
admin/templates/: base.html  dashboard.html  index.html  upload.html  visualization.html
admin/utils/: data_processor.py  geospatial.py  optimizer.py
instance/: provider_network.db
member/: data_processor.py  main.py
member/attached_assets/: Last provider data.csv
member/static/: style.css
member/templates/: index.html
static/css/: custom.css
static/js/: dashboard.js  main.js  visualization.js
templates/: admin_index.html  base.html  dashboard.html  login.html  member_interface.html  upload.html  visualization.html
uploads/: members_1756335945_Members_First50k.csv  members_1756469456_Member.csv  members_1756593359_21_members_750.csv  providers_1756635733_Provider.csv  providers_1756664923_20_reduced_450.csv  unused_providers_2.csv  unused_providers_30.csv
utils/: data_processor.py  geospatial.py  optimizer.py
