[tool]
name = "combined-flask-app"
version = "0.1.0"
description = "A combined Flask application for member and admin functionalities."
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies]
flask = "^2.0"
flask_sqlalchemy = "^2.5"
pandas = "^1.3"
# Add any other dependencies required for your project here.